--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+clusto (0.7.8) unstable; urgency=medium
+
+  * Remove dependency on distribute.
+
+-- Paul Lathrop <paul@krux.com>  Fri, 7 Aug 2015 20:26:04 -0800
+
 clusto (0.7.8) unstable; urgency=low
 
   * Merge pull request #71 from motivator/rm_bugs (Mike Newton)
